# pillar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
.pillar/: config.toml
.pillar/templates/: issue.md  milestone.md  project.md
docs/: AGENTS.md
hooks/: pre-commit  setup.sh
plans/: 001-bootstrap.md  002-basedir.md  003-comments.md  004-package-and-distribute.md
pm/Future Enhancements/: README.md
pm/Future Enhancements/issues/: 001-add-tag-support-for-issues.md  002-implement-issue-dependencies.md  003-add-search-and-filter-capabilities.md  004-export-to-various-formats-json-csv.md  005-time-tracking-integration.md  006-test-backward-compatibility.md  007-batch-operations-multi-create-edit.md  008-custom-markdown-templates-archetypes.md  009-integrated-deep-view-for-projects.md  010-direct-description-body-input-for-create.md  011-dependency-tracking-blocking-needs.md  012-hooks--trigger-actions.md  013-global-search-with-metadata-filters.md  014-ui-daemon-mode.md
pm/Future Enhancements/milestones/: user-feedback-batch-1.md  v0-2-0.md
pm/Pillar Core/: README.md
pm/Pillar Core/issues/: 001-implement-init-command.md  002-implement-project-commands.md  003-implement-milestone-commands.md  004-implement-issue-commands.md  005-implement-view-board-commands.md  006-add-comprehensive-test-suite.md  007-add-base_directory-config-support.md  008-update-all-commands-to-use-base-director.md  009-add-init--path-option.md  010-test-base-directory-functionality.md  011-design-comment-storage-format.md  012-implement-comment-add-command.md  013-implement-comment-list-command.md  014-add-author-detection-git-env.md  015-test-comment-system.md  (+8 more)
pm/Pillar UI/: README.md
pm/TestProject/: README.md
pm/Web UI/: README.md
pm/test-project/: README.md
services/ui/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
src/: cli.rs  fs.rs  main.rs  models.rs  parser.rs
src/commands/: comment.rs  export.rs  init.rs  issue.rs  milestone.rs  mod.rs  project.rs  search.rs  view.rs  webui.rs
(+23 files in other folders)
